cluster/manifests/validating-admission/base/validating_admission_policy_binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: poddisruptionbudgets.validating.kaidotio.github.io
spec:
  policyName: poddisruptionbudgets.validating.kaidotio.github.io
  validationActions:
    - Deny
    - Audit
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pods.validating.kaidotio.github.io
spec:
  policyName: pods.validating.kaidotio.github.io
  validationActions:
    - Deny
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: name
          operator: NotIn
          values:
            - istio-system
    objectSelector:
      matchExpressions:
        - key: istio.io/gateway-name
          operator: NotIn
          values:
              - waypoint
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: services.validating.kaidotio.github.io
spec:
  policyName: services.validating.kaidotio.github.io
  validationActions:
    - Deny
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: name
          operator: NotIn
          values:
            - kube-system
            - argocd
            - slack-logger # TiDBCluster does not support `services` mutation
            - mattermost # VitessCluster does not support `services` mutation
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: daemonsets.validating.kaidotio.github.io
spec:
  policyName: daemonsets.validating.kaidotio.github.io
  validationActions:
    - Deny
    - Audit
